--- a/docs/src/style.css
+++ b/docs/src/style.css
@@ -3,148 +3,8 @@
 @import "./_styles/components.css";
 @import "./_styles/fonts.css";
 @import "./_styles/highlight.css";
+@import "./_styles/docs.css";
 @import "./_styles/docsearch.css";
-
-/* Backgrounds */
-.bg-docsearch-hero {
-  background-image: url('assets/bg-docsearch.svg'), linear-gradient(#fff, #f5f5fa);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center calc(100% - 18px);
-}
-
-.bg-analytics {
-  background-image: url('assets/bg-analytics.svg');
-  background-size: 1800px;
-  background-repeat: no-repeat;
-  background-position: center 450px;
-}
-
-.bg-footer {
-  background-image: url('assets/bg-footer.svg');
-  background-color: #FDFDFE;
-  background-size: 1600px;
-  background-repeat: no-repeat;
-  background-position: center top;
-}
-
-/* Logo slider (gslide) */
-.glide__slide {
-  border-radius: 8px;
-  background: white;
-  overflow: hidden;
-
-  img {
-    padding: 4px;
-    display: inline-block;
-    vertical-align: middle;
-  }
-}
-
-/* Live Demo */
-.docsearch-live-demo-input-wrapper {
-  margin-top: 5px;
-  margin-right: 8px;
-  float: right;
-  width: 50%;
-  max-width: 450px;
-  min-width: 250px;
-
-  input, form {
-    box-shadow: none !important;
-    width: 100%;
-  }
-}
-
-.demo-header-wrapper{
-  height: 42px;
-  background: url("assets/bg-docsearch-live-demo-bootstrap.png") #563E7C no-repeat;
-  background-size: 1200px;
-  background-position: left top;
-}
-
-.demo-content-wrapper{
-  height: 400px;
-  background: url("assets/bg-docsearch-live-demo-bootstrap.png") no-repeat;
-  background-size: 1200px;
-  background-position: center -46px;
-}
-
-/* Tooltips (popper.js) */
-.my-popper {
-  padding: 24px;
-  min-width: 350px;
-  max-width: 48%;
-  margin: 0 auto;
-  box-shadow: 0 0 10px 2px #ccc;
-  background: #FFFFFF;
-  box-shadow: 0 8px 18px 0 rgba(37,44,97,0.15), 0 2px 4px 0 rgba(93,100,148,0.2);
-  z-index: 200;
-  font-size: 14px;
-  color: #8A8AAB;
-  line-height: 28px;
-  text-align: center;
-  background-image: linear-gradient(#fff, #f5f5fa);
-  border-radius: 2px;
-  border-top: solid 3px #5468ff;
-}
-
-.my-popper .popper__arrow{
-    width: 0;
-    height: 0;
-    border-style: solid;
-    position: absolute;
-    margin: 8px;
-}
-
-.my-popper .popper__arrow {
-    border-color: white;
-}
-
-.my-popper[x-placement^="bottom"] {
-    margin-top: 8px;
-}
-
-.my-popper[x-placement^="bottom"] .popper__arrow {
-    border-width: 0 8px 8px 8px;
-    border-left-color: transparent;
-    border-right-color: transparent;
-    border-top-color: transparent;
-    top: -8px;
-    left: calc(50% - 8px);
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-/* Forms */
-.control-label {
-  display: inline-block;
-  margin-bottom: 4px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.form-control {
-  border-radius: 4px;
-  border: solid 1px #DBDBE7;
-  padding: 8px 16px;
-  width: 100%;
-  margin-bottom: 8px;
-}
-
-.form-control-primary {
-  background: #FFFFFF;
-  box-shadow: 0 2px 0 0 rgba(255,255,255,0.80), inset 0 2px 9px 0 rgba(93,100,148,0.30);
-  border-radius: 24px;
-  height: 42px;
-  padding: 0 16px;
-}
-
-.elevation {
-  background-image: linear-gradient(0deg, #F5F5FA 0%, #FFFFFF 100%);
-  box-shadow: 0 2px 4px 0 rgba(93,100,148,0.20), 0 5px 15px 0 rgba(37,44,97,0.15);
-  border-radius: 5px;
-}
 
 /* Antialiasing */
 * {
@@ -172,77 +32,4 @@ code {
   @apply .bg-moon;
   @apply .rounded-1;
   font-size: .9em;
-}
-
-/* Content converted form markdown */
-.documentation-content {
-  /* Paragraphs */
-  p {
-    @apply .leading-2 my-1;
-  }
-  ul {
-    @apply .leading-2 my-1;
-  }
-  /* Titles */
-  h2 {
-    @apply .text-solstice .text-5 .normal;
-    @apply .mb-1 .mt-2;
-    /* Trick to have heading scroll into view and not being hidden by header */
-    &:before {
-      content: "";
-      @apply hidden .h-3;
-    }
-    &:target:before {
-      @apply block;
-    }
-    .anchor {
-      @apply .hidden;
-      &:after {
-        content: "#";
-      }
-    }
-    &:hover .anchor {
-      @apply .inline-block;
-    }
-  }
-}
-
-/* Custom styles */
-.custom-community-projects {
-  width: 400px;
-  opacity: 0;
-  pointer-events: none;
-  transition-property: opacity;
-  transition-duration: 0.25s;
-  will-change: opacity;
-}
-.custom-community-link:hover .custom-community-projects {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-/**
- * When we need to show code in action, we often need to show screenshots or
- * screencasts. This class will still an element to make it look like a browser
- * window.
- **/
-.fake-browser {
-  padding: 24px 1px 1px 1px;
-  @apply bg-grey;
-  border-radius: 6px;
-  position: relative;
-  overflow: hidden;
-  &:before {
-    content: "";
-    position: absolute;
-    top: 6px;
-    left: 16px;
-    @apply bg-red;
-    display: block;
-    border-radius: 50%;
-    width: 14px;
-    height: 14px;
-    box-shadow: 25px 0 0 rgba(58, 178, 189, 0.5),
-      50px 0 0 rgba(236, 139, 99, 0.5);
-  }
 }
