--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -1,5 +1,8 @@
 extends main.pug
 
+block script
+  script(src="js/home.js")
+
 block content
   .bg-docsearch-hero
     .max-w-md.m-auto.text-center.px-2
