--- a/docs/src/_layouts/two-columns.pug
+++ b/docs/src/_layouts/two-columns.pug
@@ -1,13 +1,17 @@
 extends main.pug
+
+block script
+  script(src="js/docs.js")
+
 block content
   .bgtb-moon-white-pure.px-2
     .md_flex.max-w-lg.m-auto
-      .navigation-sidebar.hidden.absolute.z-90.top-16.w-full.border-b.md_static.md_bg-transparent.md_w-25.md_block.md_border-0
+      .navigation-sidebar.absolute.z-90.top-16.w-full.border-b.md_static.bg-white.md_bg-transparent.md_w-30.md_block.md_border-0
         // Adding subsections from markdown
         .sticky.pin-t.top-3.h-100vh-3.pl-1.lg_pl-2.overflow-y-auto.pt-3
           each category in sidebar
-            .category.text-nebula.poppins.uppercase=category.title
-            ul.list-reset.pt-05.pb-1.text-1.mb-1
+            .category.text-nebula.poppins.uppercase.mb-0x=category.title
+            ul.list-reset.pt-05.pb-1.text-1.mb-1.ml-0x
               each page in category.pages
                 - var isCurrent = current.url === page.url
                 - var additionalClasses = isCurrent ? 'text-nebula' : 'text-solstice'
